--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["nutorbit <nutorbitx@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 torch = "<1.13"
+numpy = "^1.23.4"
 
 [tool.poetry.dev-dependencies]
 
