add unit test and github action

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ jupyterlab = "^3.5.0"
 pandas = "^1.5.1"
 tqdm = "^4.64.1"
 matplotlib = "^3.6.2"
+pytest = "^7.2.1"
 
 [tool.poetry.dev-dependencies]
 
