--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up ubuntu
-        run: sudo apt-get install swig build-essential python-dev python3-dev
+        run: sudo apt-get install swig build-essential python3-dev python3-pip
 
       - name: Set up python
         id: setup-python
