--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pandas = "^1.5.1"
 tqdm = "^4.64.1"
 matplotlib = "^3.6.2"
 pytest = "^7.2.1"
+scikit-learn = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 
